[project]
name = "sre-incident-env"
version = "1.0.0"
description = "SRE Incident Response OpenEnv — Real-world RL environment for alert triage, cascading failure diagnosis, and post-mortem writing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic>=2.10.4",
    "websockets>=14.1",
    "openai>=1.57.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["sre_incident_env*", "tasks*"]
